Fix projects container overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ body{
     width: 90%;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
 }
 
 .tab-container{
@@ -51,6 +51,9 @@ body{
     text-align: center;
     padding: 10px;
     border-left: 1px rgb(90, 85, 85) solid;
+    text-overflow: ellipsis;
+    
+    overflow: hidden;
 }
 
 .tab-bar .add-tab{
@@ -61,7 +64,7 @@ body{
 .side-bar{
     grid-template-columns: 1/2;
     grid-row: 3/4;
-    height: 100%;
+    height: max-content;
     background-color: rgb(46, 43, 43);
 }
 
@@ -89,6 +92,7 @@ body{
 
 
 .main-container{
+    height: max-content;
     grid-row: 3/4;
     margin: 30px;
     grid-column: 2/3;
